add refresh Token

--- a/JWT_Demo/OA_Web/Views/Shared/_Layout.cshtml
+++ b/JWT_Demo/OA_Web/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Login">Login_User_Authentication</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Login">Login_Use_RefreshToken</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Authen" asp-action="Login">Login_User_Authentication_2</a>
                         </li>
                     </ul>
                 </div>
