--- a/JWT_Demo/OA_Web/Views/Authen/Login.cshtml
+++ b/JWT_Demo/OA_Web/Views/Authen/Login.cshtml
@@ -10,13 +10,13 @@
                 <div class="form-group">
                     <label asp-for="UserName" class="col-lg-3 col-sm-3 control-label"></label>
                     <div class="col-lg-6">
-                        <input asp-for="UserName" class="form-control" name="username" />
+                        <input asp-for="UserName" class="form-control" />
                     </div>
                 </div>
                 <div class="form-group">
                     <label asp-for="Password" class="col-lg-3 col-sm-3 control-label"></label>
                     <div class="col-lg-6">
-                        <input type="password" asp-for="Password" class="form-control" name="password" />
+                        <input type="password" asp-for="Password" class="form-control" />
                     </div>
                 </div>
             </div>
